correcting background image so that it does not repeat and stretches the entire width of the screen

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body {
     background-image: url(../images/rivendell.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 footer {
